--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "amin-ahmadi.com" "\0"
             VALUE "FileDescription", "wiki_data_graph" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "wiki_data_graph" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 amin-ahmadi.com. All rights reserved." "\0"
             VALUE "OriginalFilename", "wiki_data_graph.exe" "\0"
             VALUE "ProductName", "wiki_data_graph" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
